compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_type_in_alias.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 926
expression: "type IntMap = IllMap(Int, Int)"

---
error: Unknown type
  ┌─ /src/one/two.gleam:1:15
  │
1 │ type IntMap = IllMap(Int, Int)
  │               ^^^^^^^^^^^^^^^^ Did you mean `Float`?

The type `IllMap` is not defined or imported in this module.

